# yandex-captcha-puzzle-solver

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  setup.py
.github/workflows/: docker-publish.yml  docker-testing.yml  python-package.yml  python-publish.yml  python-tests.yml
docker/: requirements.txt
docker/rootfs/opt/yandex_captcha_puzzle_solver/etc/html_templates/: form.html.j2  index.html.j2
src/grounding_server/: grounding_server.py
src/mitm_addons/: mitm_grounding_addon.py  mitm_split_addon.py
src/yandex_captcha_puzzle_solver/: __init__.py  browser_wrapper.py  image_processor.py  proxy_controller.py  yandex_captcha_puzzle_solve_server.py  yandex_captcha_puzzle_solver.py
tests/: test_api.py
utils/: gost-install.sh  linux_chrome_archive_installer.py  linux_chrome_deb_repo_installer.sh
